--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [
 
         {
-            "src": "/app/api/main.py",
+            "src": "app/main.py",
             "use": "@vercel/python"
 
         }
@@ -12,13 +12,11 @@
     "routes":[
         {
             "src": "/(.*)",
-            "dest" : "/app/api/main.py"
+            "dest" : "app/main.py"
 
         }
-
-
+    
     ]
-
 
 
 
