--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [
 
         {
-            "src": "app/main.py",
+            "src": "/app/main.py",
             "use": "@vercel/python"
 
         }
@@ -12,7 +12,7 @@
     "routes":[
         {
             "src": "/(.*)",
-            "dest" : "app/main.py"
+            "dest" : "/app/main.py"
 
         }
     
