added streamlit ui

--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,11 @@ services:
   server:
     build:
       context: .
+      dockerfile: Dockerfile
+      target: development
+    volumes:
+      - .:/app
+    working_dir: /app
     ports:
       - 8000:8000
     command: uvicorn main:app --host 0.0.0.0 --port 8000
